5th_term/formal_languages_data_processing/scil_v_1.2.3/Compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> body
Rule 2     empty -> <empty>
Rule 3     body -> optional_variables_declaration_list optional_functions_declaration_list statement_list
Rule 4     optional_variables_declaration_list -> empty
Rule 5     optional_variables_declaration_list -> variables_declaration_list
Rule 6     variables_declaration_list -> VAR variables_list
Rule 7     variables_declaration_list -> VAR variables_list variables_declaration_list
Rule 8     variables_list -> IDENT
Rule 9     variables_list -> IDENT COMMA variables_list
Rule 10    optional_functions_declaration_list -> empty
Rule 11    optional_functions_declaration_list -> functions_declaration_list
Rule 12    functions_declaration_list -> function
Rule 13    functions_declaration_list -> function functions_declaration_list
Rule 14    function -> FUNCTION IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL
Rule 15    optional_parameter_list -> empty
Rule 16    optional_parameter_list -> parameter_list
Rule 17    parameter_list -> IDENT
Rule 18    parameter_list -> IDENT COMMA parameter_list
Rule 19    statement -> statement_return
Rule 20    statement -> statement_print
Rule 21    statement -> statement_assignment
Rule 22    statement -> statement_ifthenelse
Rule 23    statement -> statement_while
Rule 24    statement -> statement_as_long_as
Rule 25    statement -> statement_compound
Rule 26    statement -> expression
Rule 27    statement_as_long_as -> AS_LONG_AS expression DO statement
Rule 28    statement_return -> RETURN expression SEMICOL
Rule 29    statement_print -> PRINT expression SEMICOL
Rule 30    statement_assignment -> IDENT ASSIGN expression SEMICOL
Rule 31    statement_ifthenelse -> IF expression THEN statement ELSE statement
Rule 32    statement_while -> WHILE expression DO statement
Rule 33    statement_compound -> LCURL statement_list RCURL
Rule 34    statement_list -> statement
Rule 35    statement_list -> statement statement_list
Rule 36    expression -> expression_integer
Rule 37    expression -> expression_identifier
Rule 38    expression -> expression_call
Rule 39    expression -> expression_binop
Rule 40    expression -> expression_group
Rule 41    expression_integer -> INT
Rule 42    expression_identifier -> IDENT
Rule 43    expression_call -> IDENT LPAREN optional_expression_list RPAREN
Rule 44    expression_binop -> expression PLUS expression
Rule 45    expression_binop -> expression MINUS expression
Rule 46    expression_binop -> expression TIMES expression
Rule 47    expression_binop -> expression DIVIDE expression
Rule 48    expression_binop -> expression EQ expression
Rule 49    expression_binop -> expression NEQ expression
Rule 50    expression_binop -> expression LT expression
Rule 51    expression_binop -> expression GT expression
Rule 52    expression_binop -> expression LTE expression
Rule 53    expression_binop -> expression GTE expression
Rule 54    expression_group -> LPAREN expression RPAREN
Rule 55    optional_expression_list -> empty
Rule 56    optional_expression_list -> expression_list
Rule 57    expression_list -> expression
Rule 58    expression_list -> expression COMMA expression_list

Terminals, with rules where they appear

ASSIGN               : 30
AS_LONG_AS           : 27
COMMA                : 9 18 58
DIVIDE               : 47
DO                   : 27 32
ELSE                 : 31
EQ                   : 48
FUNCTION             : 14
GT                   : 51
GTE                  : 53
IDENT                : 8 9 14 17 18 30 42 43
IF                   : 31
INT                  : 41
LCURL                : 14 33
LPAREN               : 14 43 54
LT                   : 50
LTE                  : 52
MINUS                : 45
NEQ                  : 49
PLUS                 : 44
PRINT                : 29
RCURL                : 14 33
RETURN               : 28
RPAREN               : 14 43 54
SEMICOL              : 28 29 30
THEN                 : 31
TIMES                : 46
VAR                  : 6 7
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

body                 : 1 14
empty                : 4 10 15 55
expression           : 26 27 28 29 30 31 32 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 57 58
expression_binop     : 39
expression_call      : 38
expression_group     : 40
expression_identifier : 37
expression_integer   : 36
expression_list      : 56 58
function             : 12 13
functions_declaration_list : 11 13
optional_expression_list : 43
optional_functions_declaration_list : 3
optional_parameter_list : 14
optional_variables_declaration_list : 3
parameter_list       : 16 18
program              : 0
statement            : 27 31 31 32 34 35
statement_as_long_as : 24
statement_assignment : 21
statement_compound   : 25
statement_ifthenelse : 22
statement_list       : 3 33 35
statement_print      : 20
statement_return     : 19
statement_while      : 23
variables_declaration_list : 5 7
variables_list       : 6 7 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . body
    (3) body -> . optional_variables_declaration_list optional_functions_declaration_list statement_list
    (4) optional_variables_declaration_list -> . empty
    (5) optional_variables_declaration_list -> . variables_declaration_list
    (2) empty -> .
    (6) variables_declaration_list -> . VAR variables_list
    (7) variables_declaration_list -> . VAR variables_list variables_declaration_list

    FUNCTION        reduce using rule 2 (empty -> .)
    RETURN          reduce using rule 2 (empty -> .)
    PRINT           reduce using rule 2 (empty -> .)
    IDENT           reduce using rule 2 (empty -> .)
    IF              reduce using rule 2 (empty -> .)
    WHILE           reduce using rule 2 (empty -> .)
    AS_LONG_AS      reduce using rule 2 (empty -> .)
    LCURL           reduce using rule 2 (empty -> .)
    INT             reduce using rule 2 (empty -> .)
    LPAREN          reduce using rule 2 (empty -> .)
    VAR             shift and go to state 6

    program                        shift and go to state 1
    body                           shift and go to state 2
    optional_variables_declaration_list shift and go to state 3
    empty                          shift and go to state 4
    variables_declaration_list     shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> body .

    $end            reduce using rule 1 (program -> body .)


state 3

    (3) body -> optional_variables_declaration_list . optional_functions_declaration_list statement_list
    (10) optional_functions_declaration_list -> . empty
    (11) optional_functions_declaration_list -> . functions_declaration_list
    (2) empty -> .
    (12) functions_declaration_list -> . function
    (13) functions_declaration_list -> . function functions_declaration_list
    (14) function -> . FUNCTION IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL

    RETURN          reduce using rule 2 (empty -> .)
    PRINT           reduce using rule 2 (empty -> .)
    IDENT           reduce using rule 2 (empty -> .)
    IF              reduce using rule 2 (empty -> .)
    WHILE           reduce using rule 2 (empty -> .)
    AS_LONG_AS      reduce using rule 2 (empty -> .)
    LCURL           reduce using rule 2 (empty -> .)
    INT             reduce using rule 2 (empty -> .)
    LPAREN          reduce using rule 2 (empty -> .)
    FUNCTION        shift and go to state 11

    optional_functions_declaration_list shift and go to state 7
    empty                          shift and go to state 8
    functions_declaration_list     shift and go to state 9
    function                       shift and go to state 10

state 4

    (4) optional_variables_declaration_list -> empty .

    FUNCTION        reduce using rule 4 (optional_variables_declaration_list -> empty .)
    RETURN          reduce using rule 4 (optional_variables_declaration_list -> empty .)
    PRINT           reduce using rule 4 (optional_variables_declaration_list -> empty .)
    IDENT           reduce using rule 4 (optional_variables_declaration_list -> empty .)
    IF              reduce using rule 4 (optional_variables_declaration_list -> empty .)
    WHILE           reduce using rule 4 (optional_variables_declaration_list -> empty .)
    AS_LONG_AS      reduce using rule 4 (optional_variables_declaration_list -> empty .)
    LCURL           reduce using rule 4 (optional_variables_declaration_list -> empty .)
    INT             reduce using rule 4 (optional_variables_declaration_list -> empty .)
    LPAREN          reduce using rule 4 (optional_variables_declaration_list -> empty .)


state 5

    (5) optional_variables_declaration_list -> variables_declaration_list .

    FUNCTION        reduce using rule 5 (optional_variables_declaration_list -> variables_declaration_list .)
    RETURN          reduce using rule 5 (optional_variables_declaration_list -> variables_declaration_list .)
    PRINT           reduce using rule 5 (optional_variables_declaration_list -> variables_declaration_list .)
    IDENT           reduce using rule 5 (optional_variables_declaration_list -> variables_declaration_list .)
    IF              reduce using rule 5 (optional_variables_declaration_list -> variables_declaration_list .)
    WHILE           reduce using rule 5 (optional_variables_declaration_list -> variables_declaration_list .)
    AS_LONG_AS      reduce using rule 5 (optional_variables_declaration_list -> variables_declaration_list .)
    LCURL           reduce using rule 5 (optional_variables_declaration_list -> variables_declaration_list .)
    INT             reduce using rule 5 (optional_variables_declaration_list -> variables_declaration_list .)
    LPAREN          reduce using rule 5 (optional_variables_declaration_list -> variables_declaration_list .)


state 6

    (6) variables_declaration_list -> VAR . variables_list
    (7) variables_declaration_list -> VAR . variables_list variables_declaration_list
    (8) variables_list -> . IDENT
    (9) variables_list -> . IDENT COMMA variables_list

    IDENT           shift and go to state 13

    variables_list                 shift and go to state 12

state 7

    (3) body -> optional_variables_declaration_list optional_functions_declaration_list . statement_list
    (34) statement_list -> . statement
    (35) statement_list -> . statement statement_list
    (19) statement -> . statement_return
    (20) statement -> . statement_print
    (21) statement -> . statement_assignment
    (22) statement -> . statement_ifthenelse
    (23) statement -> . statement_while
    (24) statement -> . statement_as_long_as
    (25) statement -> . statement_compound
    (26) statement -> . expression
    (28) statement_return -> . RETURN expression SEMICOL
    (29) statement_print -> . PRINT expression SEMICOL
    (30) statement_assignment -> . IDENT ASSIGN expression SEMICOL
    (31) statement_ifthenelse -> . IF expression THEN statement ELSE statement
    (32) statement_while -> . WHILE expression DO statement
    (27) statement_as_long_as -> . AS_LONG_AS expression DO statement
    (33) statement_compound -> . LCURL statement_list RCURL
    (36) expression -> . expression_integer
    (37) expression -> . expression_identifier
    (38) expression -> . expression_call
    (39) expression -> . expression_binop
    (40) expression -> . expression_group
    (41) expression_integer -> . INT
    (42) expression_identifier -> . IDENT
    (43) expression_call -> . IDENT LPAREN optional_expression_list RPAREN
    (44) expression_binop -> . expression PLUS expression
    (45) expression_binop -> . expression MINUS expression
    (46) expression_binop -> . expression TIMES expression
    (47) expression_binop -> . expression DIVIDE expression
    (48) expression_binop -> . expression EQ expression
    (49) expression_binop -> . expression NEQ expression
    (50) expression_binop -> . expression LT expression
    (51) expression_binop -> . expression GT expression
    (52) expression_binop -> . expression LTE expression
    (53) expression_binop -> . expression GTE expression
    (54) expression_group -> . LPAREN expression RPAREN

    RETURN          shift and go to state 24
    PRINT           shift and go to state 25
    IDENT           shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    AS_LONG_AS      shift and go to state 29
    LCURL           shift and go to state 30
    INT             shift and go to state 36
    LPAREN          shift and go to state 37

    statement_list                 shift and go to state 14
    statement                      shift and go to state 15
    statement_return               shift and go to state 16
    statement_print                shift and go to state 17
    statement_assignment           shift and go to state 18
    statement_ifthenelse           shift and go to state 19
    statement_while                shift and go to state 20
    statement_as_long_as           shift and go to state 21
    statement_compound             shift and go to state 22
    expression                     shift and go to state 23
    expression_integer             shift and go to state 31
    expression_identifier          shift and go to state 32
    expression_call                shift and go to state 33
    expression_binop               shift and go to state 34
    expression_group               shift and go to state 35

state 8

    (10) optional_functions_declaration_list -> empty .

    RETURN          reduce using rule 10 (optional_functions_declaration_list -> empty .)
    PRINT           reduce using rule 10 (optional_functions_declaration_list -> empty .)
    IDENT           reduce using rule 10 (optional_functions_declaration_list -> empty .)
    IF              reduce using rule 10 (optional_functions_declaration_list -> empty .)
    WHILE           reduce using rule 10 (optional_functions_declaration_list -> empty .)
    AS_LONG_AS      reduce using rule 10 (optional_functions_declaration_list -> empty .)
    LCURL           reduce using rule 10 (optional_functions_declaration_list -> empty .)
    INT             reduce using rule 10 (optional_functions_declaration_list -> empty .)
    LPAREN          reduce using rule 10 (optional_functions_declaration_list -> empty .)


state 9

    (11) optional_functions_declaration_list -> functions_declaration_list .

    RETURN          reduce using rule 11 (optional_functions_declaration_list -> functions_declaration_list .)
    PRINT           reduce using rule 11 (optional_functions_declaration_list -> functions_declaration_list .)
    IDENT           reduce using rule 11 (optional_functions_declaration_list -> functions_declaration_list .)
    IF              reduce using rule 11 (optional_functions_declaration_list -> functions_declaration_list .)
    WHILE           reduce using rule 11 (optional_functions_declaration_list -> functions_declaration_list .)
    AS_LONG_AS      reduce using rule 11 (optional_functions_declaration_list -> functions_declaration_list .)
    LCURL           reduce using rule 11 (optional_functions_declaration_list -> functions_declaration_list .)
    INT             reduce using rule 11 (optional_functions_declaration_list -> functions_declaration_list .)
    LPAREN          reduce using rule 11 (optional_functions_declaration_list -> functions_declaration_list .)


state 10

    (12) functions_declaration_list -> function .
    (13) functions_declaration_list -> function . functions_declaration_list
    (12) functions_declaration_list -> . function
    (13) functions_declaration_list -> . function functions_declaration_list
    (14) function -> . FUNCTION IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL

    RETURN          reduce using rule 12 (functions_declaration_list -> function .)
    PRINT           reduce using rule 12 (functions_declaration_list -> function .)
    IDENT           reduce using rule 12 (functions_declaration_list -> function .)
    IF              reduce using rule 12 (functions_declaration_list -> function .)
    WHILE           reduce using rule 12 (functions_declaration_list -> function .)
    AS_LONG_AS      reduce using rule 12 (functions_declaration_list -> function .)
    LCURL           reduce using rule 12 (functions_declaration_list -> function .)
    INT             reduce using rule 12 (functions_declaration_list -> function .)
    LPAREN          reduce using rule 12 (functions_declaration_list -> function .)
    FUNCTION        shift and go to state 11

    function                       shift and go to state 10
    functions_declaration_list     shift and go to state 38

state 11

    (14) function -> FUNCTION . IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL

    IDENT           shift and go to state 39


state 12

    (6) variables_declaration_list -> VAR variables_list .
    (7) variables_declaration_list -> VAR variables_list . variables_declaration_list
    (6) variables_declaration_list -> . VAR variables_list
    (7) variables_declaration_list -> . VAR variables_list variables_declaration_list

    FUNCTION        reduce using rule 6 (variables_declaration_list -> VAR variables_list .)
    RETURN          reduce using rule 6 (variables_declaration_list -> VAR variables_list .)
    PRINT           reduce using rule 6 (variables_declaration_list -> VAR variables_list .)
    IDENT           reduce using rule 6 (variables_declaration_list -> VAR variables_list .)
    IF              reduce using rule 6 (variables_declaration_list -> VAR variables_list .)
    WHILE           reduce using rule 6 (variables_declaration_list -> VAR variables_list .)
    AS_LONG_AS      reduce using rule 6 (variables_declaration_list -> VAR variables_list .)
    LCURL           reduce using rule 6 (variables_declaration_list -> VAR variables_list .)
    INT             reduce using rule 6 (variables_declaration_list -> VAR variables_list .)
    LPAREN          reduce using rule 6 (variables_declaration_list -> VAR variables_list .)
    VAR             shift and go to state 6

    variables_declaration_list     shift and go to state 40

state 13

    (8) variables_list -> IDENT .
    (9) variables_list -> IDENT . COMMA variables_list

    VAR             reduce using rule 8 (variables_list -> IDENT .)
    FUNCTION        reduce using rule 8 (variables_list -> IDENT .)
    RETURN          reduce using rule 8 (variables_list -> IDENT .)
    PRINT           reduce using rule 8 (variables_list -> IDENT .)
    IDENT           reduce using rule 8 (variables_list -> IDENT .)
    IF              reduce using rule 8 (variables_list -> IDENT .)
    WHILE           reduce using rule 8 (variables_list -> IDENT .)
    AS_LONG_AS      reduce using rule 8 (variables_list -> IDENT .)
    LCURL           reduce using rule 8 (variables_list -> IDENT .)
    INT             reduce using rule 8 (variables_list -> IDENT .)
    LPAREN          reduce using rule 8 (variables_list -> IDENT .)
    COMMA           shift and go to state 41


state 14

    (3) body -> optional_variables_declaration_list optional_functions_declaration_list statement_list .

    $end            reduce using rule 3 (body -> optional_variables_declaration_list optional_functions_declaration_list statement_list .)
    RCURL           reduce using rule 3 (body -> optional_variables_declaration_list optional_functions_declaration_list statement_list .)


state 15

    (34) statement_list -> statement .
    (35) statement_list -> statement . statement_list
    (34) statement_list -> . statement
    (35) statement_list -> . statement statement_list
    (19) statement -> . statement_return
    (20) statement -> . statement_print
    (21) statement -> . statement_assignment
    (22) statement -> . statement_ifthenelse
    (23) statement -> . statement_while
    (24) statement -> . statement_as_long_as
    (25) statement -> . statement_compound
    (26) statement -> . expression
    (28) statement_return -> . RETURN expression SEMICOL
    (29) statement_print -> . PRINT expression SEMICOL
    (30) statement_assignment -> . IDENT ASSIGN expression SEMICOL
    (31) statement_ifthenelse -> . IF expression THEN statement ELSE statement
    (32) statement_while -> . WHILE expression DO statement
    (27) statement_as_long_as -> . AS_LONG_AS expression DO statement
    (33) statement_compound -> . LCURL statement_list RCURL
    (36) expression -> . expression_integer
    (37) expression -> . expression_identifier
    (38) expression -> . expression_call
    (39) expression -> . expression_binop
    (40) expression -> . expression_group
    (41) expression_integer -> . INT
    (42) expression_identifier -> . IDENT
    (43) expression_call -> . IDENT LPAREN optional_expression_list RPAREN
    (44) expression_binop -> . expression PLUS expression
    (45) expression_binop -> . expression MINUS expression
    (46) expression_binop -> . expression TIMES expression
    (47) expression_binop -> . expression DIVIDE expression
    (48) expression_binop -> . expression EQ expression
    (49) expression_binop -> . expression NEQ expression
    (50) expression_binop -> . expression LT expression
    (51) expression_binop -> . expression GT expression
    (52) expression_binop -> . expression LTE expression
    (53) expression_binop -> . expression GTE expression
    (54) expression_group -> . LPAREN expression RPAREN

    $end            reduce using rule 34 (statement_list -> statement .)
    RCURL           reduce using rule 34 (statement_list -> statement .)
    RETURN          shift and go to state 24
    PRINT           shift and go to state 25
    IDENT           shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    AS_LONG_AS      shift and go to state 29
    LCURL           shift and go to state 30
    INT             shift and go to state 36
    LPAREN          shift and go to state 37

    statement                      shift and go to state 15
    statement_list                 shift and go to state 42
    statement_return               shift and go to state 16
    statement_print                shift and go to state 17
    statement_assignment           shift and go to state 18
    statement_ifthenelse           shift and go to state 19
    statement_while                shift and go to state 20
    statement_as_long_as           shift and go to state 21
    statement_compound             shift and go to state 22
    expression                     shift and go to state 23
    expression_integer             shift and go to state 31
    expression_identifier          shift and go to state 32
    expression_call                shift and go to state 33
    expression_binop               shift and go to state 34
    expression_group               shift and go to state 35

state 16

    (19) statement -> statement_return .

    RETURN          reduce using rule 19 (statement -> statement_return .)
    PRINT           reduce using rule 19 (statement -> statement_return .)
    IDENT           reduce using rule 19 (statement -> statement_return .)
    IF              reduce using rule 19 (statement -> statement_return .)
    WHILE           reduce using rule 19 (statement -> statement_return .)
    AS_LONG_AS      reduce using rule 19 (statement -> statement_return .)
    LCURL           reduce using rule 19 (statement -> statement_return .)
    INT             reduce using rule 19 (statement -> statement_return .)
    LPAREN          reduce using rule 19 (statement -> statement_return .)
    $end            reduce using rule 19 (statement -> statement_return .)
    RCURL           reduce using rule 19 (statement -> statement_return .)
    ELSE            reduce using rule 19 (statement -> statement_return .)


state 17

    (20) statement -> statement_print .

    RETURN          reduce using rule 20 (statement -> statement_print .)
    PRINT           reduce using rule 20 (statement -> statement_print .)
    IDENT           reduce using rule 20 (statement -> statement_print .)
    IF              reduce using rule 20 (statement -> statement_print .)
    WHILE           reduce using rule 20 (statement -> statement_print .)
    AS_LONG_AS      reduce using rule 20 (statement -> statement_print .)
    LCURL           reduce using rule 20 (statement -> statement_print .)
    INT             reduce using rule 20 (statement -> statement_print .)
    LPAREN          reduce using rule 20 (statement -> statement_print .)
    $end            reduce using rule 20 (statement -> statement_print .)
    RCURL           reduce using rule 20 (statement -> statement_print .)
    ELSE            reduce using rule 20 (statement -> statement_print .)


state 18

    (21) statement -> statement_assignment .

    RETURN          reduce using rule 21 (statement -> statement_assignment .)
    PRINT           reduce using rule 21 (statement -> statement_assignment .)
    IDENT           reduce using rule 21 (statement -> statement_assignment .)
    IF              reduce using rule 21 (statement -> statement_assignment .)
    WHILE           reduce using rule 21 (statement -> statement_assignment .)
    AS_LONG_AS      reduce using rule 21 (statement -> statement_assignment .)
    LCURL           reduce using rule 21 (statement -> statement_assignment .)
    INT             reduce using rule 21 (statement -> statement_assignment .)
    LPAREN          reduce using rule 21 (statement -> statement_assignment .)
    $end            reduce using rule 21 (statement -> statement_assignment .)
    RCURL           reduce using rule 21 (statement -> statement_assignment .)
    ELSE            reduce using rule 21 (statement -> statement_assignment .)


state 19

    (22) statement -> statement_ifthenelse .

    RETURN          reduce using rule 22 (statement -> statement_ifthenelse .)
    PRINT           reduce using rule 22 (statement -> statement_ifthenelse .)
    IDENT           reduce using rule 22 (statement -> statement_ifthenelse .)
    IF              reduce using rule 22 (statement -> statement_ifthenelse .)
    WHILE           reduce using rule 22 (statement -> statement_ifthenelse .)
    AS_LONG_AS      reduce using rule 22 (statement -> statement_ifthenelse .)
    LCURL           reduce using rule 22 (statement -> statement_ifthenelse .)
    INT             reduce using rule 22 (statement -> statement_ifthenelse .)
    LPAREN          reduce using rule 22 (statement -> statement_ifthenelse .)
    $end            reduce using rule 22 (statement -> statement_ifthenelse .)
    RCURL           reduce using rule 22 (statement -> statement_ifthenelse .)
    ELSE            reduce using rule 22 (statement -> statement_ifthenelse .)


state 20

    (23) statement -> statement_while .

    RETURN          reduce using rule 23 (statement -> statement_while .)
    PRINT           reduce using rule 23 (statement -> statement_while .)
    IDENT           reduce using rule 23 (statement -> statement_while .)
    IF              reduce using rule 23 (statement -> statement_while .)
    WHILE           reduce using rule 23 (statement -> statement_while .)
    AS_LONG_AS      reduce using rule 23 (statement -> statement_while .)
    LCURL           reduce using rule 23 (statement -> statement_while .)
    INT             reduce using rule 23 (statement -> statement_while .)
    LPAREN          reduce using rule 23 (statement -> statement_while .)
    $end            reduce using rule 23 (statement -> statement_while .)
    RCURL           reduce using rule 23 (statement -> statement_while .)
    ELSE            reduce using rule 23 (statement -> statement_while .)


state 21

    (24) statement -> statement_as_long_as .

    RETURN          reduce using rule 24 (statement -> statement_as_long_as .)
    PRINT           reduce using rule 24 (statement -> statement_as_long_as .)
    IDENT           reduce using rule 24 (statement -> statement_as_long_as .)
    IF              reduce using rule 24 (statement -> statement_as_long_as .)
    WHILE           reduce using rule 24 (statement -> statement_as_long_as .)
    AS_LONG_AS      reduce using rule 24 (statement -> statement_as_long_as .)
    LCURL           reduce using rule 24 (statement -> statement_as_long_as .)
    INT             reduce using rule 24 (statement -> statement_as_long_as .)
    LPAREN          reduce using rule 24 (statement -> statement_as_long_as .)
    $end            reduce using rule 24 (statement -> statement_as_long_as .)
    RCURL           reduce using rule 24 (statement -> statement_as_long_as .)
    ELSE            reduce using rule 24 (statement -> statement_as_long_as .)


state 22

    (25) statement -> statement_compound .

    RETURN          reduce using rule 25 (statement -> statement_compound .)
    PRINT           reduce using rule 25 (statement -> statement_compound .)
    IDENT           reduce using rule 25 (statement -> statement_compound .)
    IF              reduce using rule 25 (statement -> statement_compound .)
    WHILE           reduce using rule 25 (statement -> statement_compound .)
    AS_LONG_AS      reduce using rule 25 (statement -> statement_compound .)
    LCURL           reduce using rule 25 (statement -> statement_compound .)
    INT             reduce using rule 25 (statement -> statement_compound .)
    LPAREN          reduce using rule 25 (statement -> statement_compound .)
    $end            reduce using rule 25 (statement -> statement_compound .)
    RCURL           reduce using rule 25 (statement -> statement_compound .)
    ELSE            reduce using rule 25 (statement -> statement_compound .)


state 23
